maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:34: error: illegal start of simple expression
            }else if(getIndication(i-1,) == 9999){
                                       ^ShortestPathMaze:39: error: ')' expected but '}' found.
          }else if(aMurOuest(i,j)){
          ^